--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,11 +89,11 @@ jobs:
         args: apply -f general/loadbalancer-no-public-ips/constraint.yaml
 
     # Apply constraint for allow-privilege-escalation
-    # - name: constraint for allow-privilege-escalation
-    #   uses: statcan/actions/kubectl@master
-    #   with:
-    #     kubeconfig: ${{ secrets.KUBECONFIG }}
-    #     args: apply -f pod-security-policy/allow-privilege-escalation/constraint.yaml
+    - name: constraint for allow-privilege-escalation
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f pod-security-policy/allow-privilege-escalation/constraint.yaml
 
     # Apply constraint for apparmor
     # - name: constraint for apparmor
@@ -166,11 +166,11 @@ jobs:
         args: apply -f pod-security-policy/proc-mount/constraint.yaml
 
     # Apply constraint for read-only-root-filesystem
-    # - name: constraint for read-only-root-filesystem
-    #   uses: statcan/actions/kubectl@master
-    #   with:
-    #     kubeconfig: ${{ secrets.KUBECONFIG }}
-    #     args: apply -f pod-security-policy/read-only-root-filesystem/constraint.yaml
+    - name: constraint for read-only-root-filesystem
+      uses: statcan/actions/kubectl@master
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f pod-security-policy/read-only-root-filesystem/constraint.yaml
 
     # Apply constraint for seccomp
     # - name: constraint for seccomp
