feat(container-allowed-images): Add zachomedia/gitlab-runner to the whitelist

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -160,3 +160,4 @@ spec:
       - 'zachomedia/minio'
       - 'zachomedia/etcd'
       - 'zachomedia/kubernetes-sidecar-terminator'
+      - 'zachomedia/gitlab-runner'
