feat(allowed-images): add mongo to allowed list
Adds

https://hub.docker.com/_/mongo/

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -140,6 +140,7 @@ spec:
       - 'docker.io/bitnami/mariadb'
       - 'docker.io/bitnami/postgresql'
       - 'docker.io/bitnami/minideb'
+      - 'library/mongo'
 
       # Dremio
       - 'dremio/'
