feat(gatekeeper): Add allowed image

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -15,6 +15,7 @@ spec:
       - 'statcan/'
 
       # Temporary
+      - "curlimages/curl"
       - 'sylus/gitlab-ci'
       - 'python'
       - 'docker:'
