feat(gatekeeper): Add allowed images

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -171,7 +171,4 @@ spec:
       - 'velero'
 
       # Utilities
-      - 'zachomedia/minio'
-      - 'zachomedia/etcd'
-      - 'zachomedia/kubernetes-sidecar-terminator'
-      - 'zachomedia/gitlab-runner'
+      - 'zachomedia/'
