feat(psp): Add new flexvol driver

--- a/pod-security-policy/flexvolume-drivers/constraint.yaml
+++ b/pod-security-policy/flexvolume-drivers/constraint.yaml
@@ -11,3 +11,4 @@ spec:
     allowedFlexVolumes:
     - driver: "azure/blobfuse"
     - driver: "microsoft.com/smb"
+    - driver: "informaticslab/goofys-flex-volume"
