feat(opa): Update to latest rc1

--- a/pod-security-policy/users/constraint.yaml
+++ b/pod-security-policy/users/constraint.yaml
@@ -11,7 +11,7 @@ spec:
         kinds: ["Pod"]
   parameters:
     runAsUser:
-      rule: MustRunAs
+      rule: MustRunAs # MustRunAsNonRoot # RunAsAny
       ranges:
         - min: 100
           max: 200
