--- a/pod-security-policy/selinux/constraint.yaml
+++ b/pod-security-policy/selinux/constraint.yaml
@@ -9,7 +9,7 @@ spec:
         kinds: ["Pod"]
   parameters:
     allowedSELinuxOptions:
-        level: s0:c123,c456
+      - level: s0:c123,c456
         role: object_r
         type: svirt_sandbox_file_t
         user: system_u
