--- a/service-mesh/peer-authentication/template.yaml
+++ b/service-mesh/peer-authentication/template.yaml
@@ -43,5 +43,7 @@ spec:
           not peer.mtls.mode == "STRICT"
           not peer.mtls == {}
           not peer.mtls == null
+          not peer.mtls
+
           msg := "spec.peers does not include STRICT mTLS settings"
         }
