feat(opa): Container allowed images

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -16,6 +16,8 @@ spec:
       - 'statcan/'
 
       # Temporary
+      - "zap2docker-stable:"
+      - "rabbitmq:"
       - "openpolicyagent/"
       - "octopusdeploy/octo"
       - "lachlanevenson/k8s-helm:"
