feat(opa): Container allowed images

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -16,7 +16,7 @@ spec:
       - 'statcan/'
 
       # Temporary
-      - "zap2docker-stable:"
+      - "owasp/zap2docker-stable:"
       - "rabbitmq:"
       - "openpolicyagent/"
       - "octopusdeploy/octo"
