feat(boathouse): Allow boathouse flexvol driver

--- a/pod-security-policy/flexvolume-drivers/constraint.yaml
+++ b/pod-security-policy/flexvolume-drivers/constraint.yaml
@@ -12,3 +12,4 @@ spec:
     - driver: "azure/blobfuse"
     - driver: "microsoft.com/smb"
     - driver: "informaticslab/goofys-flex-volume"
+    - driver: "statcan.gc.ca/boathouse"
