feat(opa): Add additional container to whitelist

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -62,6 +62,7 @@ spec:
       - 'k8s.gcr.io/'
       - 'nginx'
       - 'ubuntu:'
+      - 'kairen/rotate-elasticsearch-index'
 
       # Base containers
       - 'alpine:'
