feat(allowed): Add aquasec to allowed images

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -27,6 +27,7 @@ spec:
       - 'docker:'
       - 'certbot/'
       - 'aquasec/'
+      - 'docker.io/aquasec/'
       - 'cachethq/docker:'
       - 'docker.io/postgres:'
       - 'bitnami/matomo'
