Adding miniconda image to allowed images

--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -72,6 +72,7 @@ spec:
       - 'library/bash'
       - 'python:'
       - 'library/python'
+      - 'continuumio/miniconda'
       - 'julia:'
       - 'library/julia'
       - 'sha256:'
