--- a/general/container-allowed-images/constraint.yaml
+++ b/general/container-allowed-images/constraint.yaml
@@ -72,7 +72,7 @@ spec:
       - 'library/bash'
       - 'python:'
       - 'library/python'
-      - 'continuumio/miniconda'
+      - 'continuumio/miniconda3'
       - 'julia:'
       - 'library/julia'
       - 'sha256:'
