feat(kubeflow): Ignore MetaController

--- a/pod-security-policy/privileged-containers/constraint.yaml
+++ b/pod-security-policy/privileged-containers/constraint.yaml
@@ -34,3 +34,7 @@ spec:
         - operator: "NotIn"
           key: "app"
           values: ["sonarqube"]
+        # Ignore MetaController
+        - operator: "NotIn"
+          key: "app"
+          values: ["metacontroller"]
