feat(gateways): add script to simplify updating the templates Rego.

--- a/service-mesh/gateway/template.yaml
+++ b/service-mesh/gateway/template.yaml
@@ -24,65 +24,65 @@ spec:
                 type: string
   targets:
     - target: admission.k8s.gatekeeper.sh
-      rego: |
+      rego: |-
         package securedgateways
 
         # Ensure HTTP is only for redirect
         violation[{"msg": msg}] {
-          gateway := input.review.object
-          server := gateway.spec.servers[_]
+        	gateway := input.review.object
+        	server := gateway.spec.servers[_]
 
-          is_http(server.port.protocol)
-          not server.tls.httpsRedirect
-          msg := "HTTP servers can only be used for HTTPS redirect. Please ensure that httpsRedirect is set to true in the TLS settings."
+        	is_http(server.port.protocol)
+        	not server.tls.httpsRedirect
+        	msg := "HTTP servers can only be used for HTTPS redirect. Please ensure that httpsRedirect is set to true in the TLS settings."
         }
 
         is_http(protocol) {
-          protocol == "HTTP"
+        	protocol == "HTTP"
         }
 
         is_http(protocol) {
-          protocol == "HTTP2"
+        	protocol == "HTTP2"
         }
 
         # Ensure minimum TLS is set on HTTPS
         violation[{"msg": msg}] {
-          gateway := input.review.object
-          server := gateway.spec.servers[_]
+        	gateway := input.review.object
+        	server := gateway.spec.servers[_]
 
-          server.port.protocol == "HTTPS"
-          not server.tls.minProtocolVersion
-          msg := tls_protocol_violation_msg("minProtocolVersion", input.parameters.minTLSVersions)
+        	server.port.protocol == "HTTPS"
+        	not server.tls.minProtocolVersion
+        	msg := tls_protocol_violation_msg("minProtocolVersion", input.parameters.minTLSVersions)
         }
 
         # Ensure HTTPS follows minimum TLS settings
         violation[{"msg": msg}] {
-          gateway := input.review.object
-          server := gateway.spec.servers[_]
+        	gateway := input.review.object
+        	server := gateway.spec.servers[_]
 
-          server.port.protocol == "HTTPS"
-          not contains(input.parameters.minTLSVersions, server.tls.minProtocolVersion)
-          msg := tls_protocol_violation_msg("minProtocolVersion", input.parameters.minTLSVersions)
+        	server.port.protocol == "HTTPS"
+        	not contains(input.parameters.minTLSVersions, server.tls.minProtocolVersion)
+        	msg := tls_protocol_violation_msg("minProtocolVersion", input.parameters.minTLSVersions)
         }
 
         # Ensure maximum TLS is set on HTTPS
         violation[{"msg": msg}] {
-          gateway := input.review.object
-          server := gateway.spec.servers[_]
+        	gateway := input.review.object
+        	server := gateway.spec.servers[_]
 
-          server.port.protocol == "HTTPS"
-          not server.tls.maxProtocolVersion
-          msg := tls_protocol_violation_msg("maxProtocolVersion", input.parameters.maxTLSVersions)
+        	server.port.protocol == "HTTPS"
+        	not server.tls.maxProtocolVersion
+        	msg := tls_protocol_violation_msg("maxProtocolVersion", input.parameters.maxTLSVersions)
         }
 
         # Ensure HTTPS follows maximum TLS settings
         violation[{"msg": msg}] {
-          gateway := input.review.object
-          server := gateway.spec.servers[_]
+        	gateway := input.review.object
+        	server := gateway.spec.servers[_]
 
-          server.port.protocol == "HTTPS"
-          not contains(input.parameters.maxTLSVersions, server.tls.maxProtocolVersion)
-          msg := tls_protocol_violation_msg("maxProtocolVersion", input.parameters.maxTLSVersions)
+        	server.port.protocol == "HTTPS"
+        	not contains(input.parameters.maxTLSVersions, server.tls.maxProtocolVersion)
+        	msg := tls_protocol_violation_msg("maxProtocolVersion", input.parameters.maxTLSVersions)
         }
 
         tls_protocol_violation_msg(parameterName, options) = msg {
@@ -91,27 +91,27 @@ spec:
 
         # Ensure only approved CipherSuites are used.
         violation[{"msg": msg}] {
-          gateway := input.review.object
-          server := gateway.spec.servers[_]
+        	gateway := input.review.object
+        	server := gateway.spec.servers[_]
 
-          server.port.protocol == "HTTPS"
-          approvedCipherSuites := {cs | cs = input.parameters.approvedCipherSuites[_]}
-          usedCipherSuites := {cs | cs = server.tls.cipherSuites[_]}
-          count(usedCipherSuites - approvedCipherSuites) != 0
-          msg := sprintf("Only the following CipherSuites may be used: %v", [approvedCipherSuites])
+        	server.port.protocol == "HTTPS"
+        	approvedCipherSuites := {cs | cs = input.parameters.approvedCipherSuites[_]}
+        	usedCipherSuites := {cs | cs = server.tls.cipherSuites[_]}
+        	count(usedCipherSuites - approvedCipherSuites) != 0
+        	msg := sprintf("Only the following CipherSuites may be used: %v", [approvedCipherSuites])
         }
 
         # Ensure CipherSuites are set and not empty
         violation[{"msg": msg}] {
-          gateway := input.review.object
-          server := gateway.spec.servers[_]
+        	gateway := input.review.object
+        	server := gateway.spec.servers[_]
 
-          server.port.protocol == "HTTPS"
-          cipherSuites := [cs | cs = server.tls.cipherSuites[_]]
+        	server.port.protocol == "HTTPS"
+        	cipherSuites := [cs | cs = server.tls.cipherSuites[_]]
           count(cipherSuites) == 0
-          msg := sprintf("CipherSuites must be defined from the following: %v", [input.parameters.approvedCipherSuites])
+        	msg := sprintf("CipherSuites must be defined from the following: %v", [input.parameters.approvedCipherSuites])
         }
 
         contains(array, string) {
-          array[_] == string
+        	array[_] == string
         }
