feat(gateway): ensure the TLS mode is set to SIMPLE.

--- a/service-mesh/gateway/constraint.yaml
+++ b/service-mesh/gateway/constraint.yaml
@@ -17,4 +17,5 @@ spec:
       - ECDHE-ECDSA-AES128-GCM-SHA256
     maxTLSVersions: ["TLSV1_2"]
     minTLSVersions: ["TLSV1_2"]
+    tlsModes: ["SIMPLE"]
 
