--- a/service-mesh/gateway/template.yaml
+++ b/service-mesh/gateway/template.yaml
@@ -22,6 +22,10 @@ spec:
               type: array
               items:
                 type: string
+            tlsModes:
+              type: array
+              items:
+                type: string
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |-
@@ -110,6 +114,24 @@ spec:
         	cipherSuites := [cs | cs = server.tls.cipherSuites[_]]
           count(cipherSuites) == 0
         	msg := sprintf("CipherSuites must be defined from the following: %v", [input.parameters.approvedCipherSuites])
+        }
+
+        violation[{"msg": msg}] {
+        	gateway := input.review.object
+        	server := gateway.spec.servers[_]
+        	
+        	server.port.protocol == "HTTPS"
+        	not server.tls.mode
+        	msg := sprintf("TLS mode must be set to one of the following: %v", [input.parameters.tlsModes])
+        }
+
+        violation[{"msg": msg}] {
+        	gateway := input.review.object
+        	server := gateway.spec.servers[_]
+        	
+        	server.port.protocol == "HTTPS"
+        	not contains(input.parameters.tlsModes, server.tls.mode)
+        	msg := sprintf("TLS mode must be set to one of the following: %v", [input.parameters.tlsModes])
         }
 
         contains(array, string) {
