feat: Add block proB pod unless authpolicy present

--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,9 @@ spec:
       - group: "networking.k8s.io"
         version: "v1"
         kind: "NetworkPolicy"
+      - group: "security.istio.io"
+        version: "v1beta1"
+        kind: "AuthorizationPolicy"
       - group: ""
         version: "v1"
         kind: "Pod"
