--- a/config.yaml
+++ b/config.yaml
@@ -15,3 +15,6 @@ spec:
       - group: "networking.k8s.io"
         version: "v1"
         kind: "NetworkPolicy"
+      - group: ""
+        version: "v1"
+        kind: "Pod"
