fix(prob-auth): rego to handled specific pro-b If classification not provided assumed unclassified

--- a/aaw/prob-auth/template.yaml
+++ b/aaw/prob-auth/template.yaml
@@ -12,7 +12,7 @@ spec:
       rego: |
         package probauth
         violation[{"msg": msg}] {
-          not input.review.object.metadata.labels["data.statcan.gc.ca/classification"] == "unclassified"
+          input.review.object.metadata.labels["data.statcan.gc.ca/classification"] == "protected-b"
           input.review.object.kind == "Pod"
           ns := input.review.object.metadata.namespace
           namePod := input.review.object.metadata.name
